k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreservice
  labels:
    app: coreservice
spec:
  selector:
    matchLabels:
      app: coreservice
  template:
    metadata:
      labels:
        app: coreservice
    spec:
      containers:
        - name: coreservice
          image: coreservice:latest
          ports:
            - containerPort: 8080
