k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreservice
  labels:
    app: coreservice
spec:
  type: ClusterIP
  selector:
    app: coreservice
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
